# mutable

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile.base  Dockerfile.build  Dockerfile.run  README.md
.circleci/: config.yml
src/: Mutable.cc  Mutable.h  args.hxx  httplib.hpp  main.cc
src/chains/: Chain.cc  Chain.h
src/chains/mutable/: 00001_up_create_initial_structure.sql  MutableChain.cc  MutableChain.h  init.json
src/clients/: ElasticSearchClient.cc  ElasticSearchClient.h  KafkaConsumer.cc  KafkaConsumer.h  KafkaProducer.cc  KafkaProducer.h  MongoClient.cc  MongoClient.h  MysqlClient.cc  MysqlClient.h  PostgresClient.cc  PostgresClient.h  RedisClient.cc  RedisClient.h
src/consumers/: ControlConsumer.cc  ControlConsumer.h  EchoConsumer.cc  EchoConsumer.h  MutatorConsumer.cc  MutatorConsumer.h  WalkerConsumer.cc  WalkerConsumer.h
src/mutators/: Mutator.cc  Mutator.h
src/tailers/: MongoTailer.cc  MongoTailer.h
src/utils/: Common.cc  Common.h  File.cc  File.h  Json.cc  Json.h  Url.cc  Url.h
